[gd_scene load_steps=2 format=3 uid="uid://c8q6y8j7r7n0x"]

[ext_resource type="Script" uid="uid://bydhq3a1ywccm" path="res://scenes/test/manager_system_test.gd" id="1_2y3vx"]

[node name="ManagerSystemTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2y3vx")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "管理器系统测试"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 60.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 300

[node name="ManagerListPanel" type="Panel" parent="HSplitContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/ManagerListPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="HSplitContainer/ManagerListPanel/VBoxContainer"]
layout_mode = 2
text = "管理器列表"
horizontal_alignment = 1

[node name="ManagerList" type="ItemList" parent="."]
layout_mode = 2
offset_left = 10.0
offset_top = 100.0
offset_right = 300.0
offset_bottom = 500.0

[node name="ManagerInfoPanel" type="Panel" parent="HSplitContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/ManagerInfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="HSplitContainer/ManagerInfoPanel/VBoxContainer"]
layout_mode = 2
text = "管理器信息"
horizontal_alignment = 1

[node name="ManagerInfo" type="TextEdit" parent="."]
layout_mode = 2
offset_left = 310.0
offset_top = 100.0
offset_right = 1000.0
offset_bottom = 500.0
editable = false
wrap_mode = 1

[node name="ActionButtons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -50.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="InitializeButton" type="Button" parent="ActionButtons"]
layout_mode = 2
text = "初始化"

[node name="ResetButton" type="Button" parent="ActionButtons"]
layout_mode = 2
text = "重置"

[node name="CleanupButton" type="Button" parent="ActionButtons"]
layout_mode = 2
text = "清理"

[node name="RefreshButton" type="Button" parent="ActionButtons"]
layout_mode = 2
text = "刷新"

[node name="BackButton" type="Button" parent="ActionButtons"]
layout_mode = 2
text = "返回"
